Changelog
=========

0.6.13 (unreleased)
-------------------

- Nothing changed yet.


0.6.12 (2011-11-29)
-------------------

- Fixed an issue with PURGE not being received if basic authentication is
  enabled.
- Added an "indexes" option to the wsgi recipe to limit access to directory
  indexes unless "indexes = on".


0.6.11 (2011-11-28)
-------------------

- Lots of template whitespace removal to produce more legible apache configs.
- Fixed bug where RewriteRule directives were being concatenated on a single
  line.


0.6.10 (2011-11-26)
-------------------

- Redirects (such as those used by the auto-www option) now pay attention to
  the "ssl" option, redirecting to https:// or http:// as required.
- Updated doctests with unused option ordering.


0.6.9 (2011-09-14)
------------------

- Brown paper bag.


0.6.8 (2011-09-14)
------------------

- Support ${:ssl} 'only' option, to turn off the HTTP -> HTTP redirect


0.6.7 (2011-09-06)
------------------

- Fix WSGI static_aliases to add a newline between each.
- Improve output formatting of basic_auth option

0.6.6 (2011-09-05)
------------------

- SSL now works with WSGI using either the 'protected' argument for multiple 'Location's or the 'realm', 'username', 'password' for '<Location />'


0.6.5 (2011-08-24)
------------------

- Nothing changed yet.


0.6.4 (2011-08-22)
------------------

- Use FileSystemLoader


0.6.3 (2011-08-17)
------------------

- Don't turn on auth if realm is empty


0.6.0 (2011-08-13)
------------------

- Don't hard code Jinja2 dependency
- Move entirely to Jinja2
- Remove Cheetah
- Remove zope.testing from test dependencies
- Remove Standalone
- Define a 'body' block that can be overriden
- Tests now use difflib to give 'git diff' style output when there are problems
- Add an ssl flag so we can provide sensible ssl defaults but still turn it on and off
- Merge apache and apache-ssl into a single template

0.5.10 (2011-07-13)
-------------------
