@@ -101,6 +101,12 @@ NameVirtualHost {{ interface }}:{{ https_port }}
     </Location>
     {%- endfor %}
 
+    {% if requestheader is defined %}
+    {% for k, v in requestheader.items() %}
+    RequestHeader set {{ k }} "{{ v }}"
+    {% endfor %}
+    {% endif %}
+
     {% block body -%}
     ProxyPreserveHost On
     <Proxy *>
