@@ -4,7 +4,9 @@ Changelog
 0.6.13 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Allow recipe to set RequestHeaders::
+
+      requestheader.plone_skin = Sunburst
 
 
 0.6.12 (2011-11-29)
